# doom-engine

./: .gitignore  Cargo.toml  MosqueraAdrian.docx  README.md
.github/workflows/: rust.yml
resources/shaders/: basic.frag  basic.vert  light.frag  light.vert  texture.frag  texture.vert
resources/shaders/basic/: basic.frag  basic.fs  basic.vert  basic.vs
shaders/basic/: basic.fs
src/: graphics.rs  lib.rs  main.rs  maths.rs
src/graphics/: camera.rs  context.rs  geometry.rs  mesh.rs  window.rs  wrapper.rs
src/graphics/geometry/: triangle.rs
src/graphics/wrapper/: bo.rs  shader_program.rs  texture.rs  vao.rs  vbo.rs  vertex_attrib.rs  vertex_attribute.rs
src/maths/: matrix.rs  vector.rs
src/prelude/: graphics.rs  maths.rs  mod.rs
src/prelude/graphics/: window.rs  wrapper.rs
src/prelude/graphics/wrapper/: bo.rs  shader_program.rs  texture.rs  vao.rs  vertex_attrib.rs
src/prelude/maths/: matrix.rs  vector.rs
tests/: tests.rs
